fix popup stats styles
Squashed commit of the following:

commit e8d9463c9859ea8a488200ffc3623a8d0d88ebbf
Merge: e010ebc8c a83d683e8
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Jun 10 16:46:04 2024 +0300

    Merge branch 'v5.0' into fix/popup-stats-style-001

commit e010ebc8cc184925316c06fd2b342c043da0175f
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Jun 10 16:45:50 2024 +0300

    fix popup stats styles

--- a/Extension/src/pages/common/components/ui/Select/select.pcss
+++ b/Extension/src/pages/common/components/ui/Select/select.pcss
@@ -31,13 +31,13 @@
         right: 0;
         z-index: 10;
         border: 1px solid var(--gray700);
-        border-radius: 4px;
+        border-radius: 8px;
         max-height: 265px;
         min-width: 160px;
         max-width: 220px;
         overflow-y: auto;
         box-shadow: 0 0 7px 3px rgba(0, 0, 0, 0.1);
-        margin: 13px 0 0 0;
+        margin: 12px 0 0 0;
         background-color: var(--white);
         scrollbar-width: thin;
 
@@ -106,14 +106,16 @@
 
         .select__value {
             width: 100%;
-            font-size: 12px;
+            font-size: 14px;
+            line-height: 24px;
             text-align-last: left;
-            padding-left: 25px;
+            padding: 0 24px;
         }
 
         .select__list {
             left: 0;
             right: initial;
+            margin-top: 20px;
         }
     }
 }
