--- a/Extension/src/pages/popup/components/Stats/StatsChart/chart.pcss
+++ b/Extension/src/pages/popup/components/Stats/StatsChart/chart.pcss
@@ -1,6 +1,7 @@
 .chart {
     & .tick text {
         fill: var(--gray700);
+        font-size: 12px;
 
         @media (prefers-color-scheme: dark) {
             fill: var(--gray300);
