--- a/Extension/src/pages/popup/components/Stats/StatsChart/stats-chart.pcss
+++ b/Extension/src/pages/popup/components/Stats/StatsChart/stats-chart.pcss
@@ -2,7 +2,7 @@
     height: 100%;
 
     &__filters {
-        padding: 10px 10px 27px 10px;
+        padding: 4px 16px 12px;
         display: flex;
         justify-content: space-between;
     }
