--- a/Extension/src/pages/popup/components/Stats/StatsTable/stats-table.pcss
+++ b/Extension/src/pages/popup/components/Stats/StatsTable/stats-table.pcss
@@ -1,20 +1,17 @@
 .stats {
-    padding: 22px 20px 8px;
+    padding: 8px 0;
 
     &__list {
-        font-size: 13px;
+        font-size: 14px;
+        line-height: 24px;
     }
 
     &__item {
-        padding: 0;
+        padding: 8px 16px;
         list-style: none;
-        margin: 0 0 15px;
         display: flex;
-    }
-
-    &__name {
-        outline: none;
-        color: rgba(34, 34, 34, 0.58);
+        justify-content: space-between;
+        color: var(--gray3d);
 
         @media (prefers-color-scheme: dark) {
             color: var(--gray300);
@@ -22,37 +19,22 @@
     }
 
     &__value {
-        outline: none;
-        margin-left: auto;
         font-weight: 600;
-        color: var(--gray900);
-
-        @media (prefers-color-scheme: dark) {
-            color: var(--grayd8);
-        }
     }
 }
 
 .light-mode {
     .stats {
-        &__name {
-            color: rgba(34, 34, 34, 0.58);
-        }
-
-        &__value {
-            color: var(--gray900);
+        &__item {
+            color: var(--gray3d);
         }
     }
 }
 
 .dark-mode {
     .stats {
-        &__name {
+        &__item {
             color: var(--gray300);
-        }
-
-        &__value {
-            color: var(--grayd8);
         }
     }
 }
