--- a/Extension/src/pages/popup/components/Tabs/tabs.pcss
+++ b/Extension/src/pages/popup/components/Tabs/tabs.pcss
@@ -10,6 +10,13 @@
         overflow: auto;
         scrollbar-width: thin;
 
+        &--stats {
+            min-height: 176px;
+            max-height: 176px;
+            overflow-y: scroll;
+            scrollbar-width: thin;
+        }
+
         &--mv3 {
             /* the height of the tabs_panel */
             padding-top: 40px;
